[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
panic = "abort"
incremental = true

[package]
name = "HytaleRS"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["fs", "time", "rt", "rt-multi-thread", "macros"] }
log = "0.4.29"
fern = "0.7.1"
chrono = "0.4.43"
colored = "3.1.1"
once_cell = "1.21.3"
clap = { version = "4.5.54", features = ["derive"] }