[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
#panic = "abort"

[profile.dev]
opt-level = 1
#panic = "abort"
incremental = true

[package]
name = "HytaleRS"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["fs", "time", "rt", "rt-multi-thread", "macros"] }
log = "0.4.29"
fern = "0.7.1"
chrono = "0.4.43"
colored = "3.1.1"
once_cell = "1.21.3"
clap = { version = "4.5.54", features = ["derive"] }
parking_lot = "0.12.5"
crossbeam = "0.8.4"
ahash = "0.8.12"
rayon = "1.11.0"
serde_json = "1.0.149"
serde = { version = "1.0.228", features = ["derive"] }
semver = { version = "1.0.27", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4"] }
crossbeam-channel = "0.5.15"
criterion = "0.8.1"
rcgen = "0.14.7"
rustls = "0.23.36"
quinn = "0.11.9"
anyhow = "1.0.100"
futures = "0.3.31"
quote = "1.0.43"
syn = "2.0.114"
proc-macro2 = "1.0.105"
async-trait = "0.1.89"
memchr = "2.7.6"
num_enum = "0.7.5"
strum = "0.27.2"
strum_macros = "0.27.2"